Fix topbar on small devices

--- a/react/index.scss
+++ b/react/index.scss
@@ -50,7 +50,6 @@ input[type="file"] {
 	z-index: 1;
 	background-color: #313131;
 	display: inline-block;
-	position: absolute;
 	width: 100%;
 }
 .topnav .logo {
@@ -188,10 +187,11 @@ input[type="file"] {
 /**/
 
 .layout-container {
-	padding: 62px 0 0 0;
 	height: 100%;
 	background-color: rgba(35,35,35,.8);
 	width: 100%;
+	display: flex;
+	flex-direction: column;
 }
 .main-content {
 	height: 100%;
